alpinessh-tutorial-deployment.yaml
# To deploy: kubectl create -f alpinesshd-hello-world-deployment.yaml
# Access it with the API as a proxy:
# $ kubectl proxy
# Then in you browser: http://localhost:8001/api/v1/namespaces/default/services/alpinesshd:/proxy/#!/

apiVersion: v1
kind: Service
metadata:
  name: alpinesshd
spec:
  type: LoadBalancer
  ports:
  - port: 2223 
    targetPort: 22
    nodePort: 30008
  selector:
    app: alpinesshd
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpinesshd
spec:
  selector:
    matchLabels:
      app: alpinesshd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alpinesshd
    spec:
      imagePullSecrets:
        - name: solarcompute-registry
      containers:
      - image: localhost:5000/alpinewithsshd:v1.0
        name: alpinesshd
        ports:
        - containerPort: 22
          name: alpinesshd
