tornado-tutorial-deployment.yaml
# To deploy: kubectl create -f tornadoapi-hello-world-deployment.yaml
# Access it with the API as a proxy:
# $ kubectl proxy
# Then in you browser: http://localhost:8001/api/v1/namespaces/default/services/tornadoapi:/proxy/#!/

apiVersion: v1
kind: Service
metadata:
  name: tornadoapi
spec:
  type: LoadBalancer
  ports:
  - port: 8079
    targetPort: 8888
    nodePort: 30002
  selector:
    app: tornadoapi
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tornadoapi
spec:
  selector:
    matchLabels:
      app: tornadoapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tornadoapi
    spec:
      imagePullSecrets:
        - name: solarcompute-registry
      containers:
      - image: container.hub.solarcompute.com/tornado-tutorial:v1.0
        name: tornadoapi
        ports:
        - containerPort: 8888
          name: tornadoapi
