ingress-magical-tutorial.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-magical-square-app
spec:
  rules:
  - host: "magical.solarcompute"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: magiclsquare
            port:
              number: 8475
